src/test/deca/context/valid/created/cast_compatible/subClass.deca
// Description:
//      Cast d'une sous classe
// Resultats:
//      OK

{
    Object a = null;
}