src/test/deca/context/invalid/created/wrongTypes/affectation/wrong_type_INT_BOOLEAN.deca
// Description:
//  Assign un bool to int
// 
// Resultats:
//    Ligne 8 : types don't match!
{
    int a;
    a = true;
}